[metadata]
name = starknet-l1-storage-verifier
description = Ethereum storage verifier for Starknet
author = Marcello Bardus
author_email = marcello@bardus.it
license = MIT
long_description = file: README.md
long_description_content_type = text/x-markdown; charset=UTF-8
platforms = any

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =contracts

python_requires = >=3.7

install_requries =
    cairo-lang==0.5.2
    eth-brownie>=1.10.0,<2.0.0
    web3
[options.packages.find]
where = contracts
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    tox
    pytest
    hypothesis

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tool:isort]
profile = black

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
per_file_ignores =
    # ignore docstrings in tests
    tests/*:D100,D101,D102,D103,D104,D105,D106,D107
